--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
     <title>Portfolio</title>
 </head>
-<body>
+<body class="fondo">
     <h1 class="titulo">ALEXIA GÓMEZ</h1>
     <hr></hr>
-    <h2 class="titulo">portafolio</h2>
+    <h2 class="titulo">portfolio</h2>
     
     <nav>
         <ul class="nav-alinear">
@@ -37,6 +37,9 @@
           <div class="carousel-item">
             <img src="assets/cajita.jpg" class="d-block w-100" alt="producto hecho en sketchup">
           </div>
+          <div class="carousel-item">
+            <img src="assets/catedral.png" class="d-block w-100" alt="producto hecho en sketchup">
+          </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -48,5 +51,34 @@
         </button>
       </div>
 
+      <section>
+      <img src="assets/yo-conlaballena.jpg" class="" alt="Imagen de alexia gomez"> 
+      <p><strong>About me
+        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed varius aliquet tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
+      </section>
+
+      <section>
+        <img src="" class="" alt="Imagen de alexia gomez"> 
+        <p><strong>Abilities
+          <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed varius aliquet tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
+        </section>
+
 </body>
-</html>
+</html><div id="carouselExampleFade" class="carousel slide carousel-fade">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="assets/distriplinios.png" class="d-block w-100" alt="marketing con distriplinios">
+    </div>
+    <div class="carousel-item">
+      <img src="assets/fundamentos-desarrollowebç.png" class="d-block w-100" alt="fundamentos del fundamentos desarrollo web">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
