--- a/index.html
+++ b/index.html
@@ -51,14 +51,18 @@
         </button>
       </div>
 
+      <hr></hr>
+
       <section>
-      <img src="assets/yo-conlaballena.jpg" class="" alt="Imagen de alexia gomez"> 
-      <p><strong>About me
+      <img src="assets/yo-conlaballena.jpg" class="imagenballena" alt="Imagen de alexia gomez"> 
+      <section class="texto1">
+        <p><strong>About me
         <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed varius aliquet tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
+      </section>
       </section>
 
       <section>
-        <img src="" class="" alt="Imagen de alexia gomez"> 
+        <img src="assets/apps.png" class="" alt="imagen de apps"> 
         <p><strong>Abilities
           <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed varius aliquet tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
         </section>
