--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </section>
 
       <section>
-        <img src="assets/apps.png" class="" alt="imagen de apps"> 
+        <img src="assets/apps.png" class="imaApps" alt="imagen de apps"> 
         <p><strong>Abilities
           <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed varius aliquet tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
         </section>
