--- a/index.html
+++ b/index.html
@@ -1,80 +1,108 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="stylesheet.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
-    <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link id="light-mode" href="stylesheet.css" rel="stylesheet">
+  <link id="dark-mode" href="stylesheet2.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
+  <title>Portfolio</title>
+  <script src="JS/cambio.js"></script>
 </head>
+
 <body class="fondo">
-    <h1 class="titulo">ALEXIA GÓMEZ</h1>
-    <hr></hr>
-    <h2 class="titulo">portfolio</h2>
-    
-    <nav>
-        <ul class="nav-alinear">
-            <li>Projects</li>
-            <li>About me</li>
-            <li>Abilities</li>
-            <li>Others</li>
-            <li>Contact</li>
-        </ul>
-    </nav>
+  <div class="container-fluid">
+  <h1 class="titulo3"><strong>ALEXIA GÓMEZ</strong></h1>
+  <hr>
+  </hr>
+  <h4 class="titulo4">Portfolio</h4>
 
-    <div id="carouselExample" class="carousel slide">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="assets/personita.jpg" class="d-block w-100" alt="dibujo técnico">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/tipografia.png" class="d-block w-100" alt="texto: what do you see">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/cajita.jpg" class="d-block w-100" alt="producto hecho en sketchup">
-          </div>
-          <div class="carousel-item">
-            <img src="assets/catedral.png" class="d-block w-100" alt="producto hecho en sketchup">
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+  <nav>
+    <ul class="nav-alinear">
+      <li>Projects</li>
+      <li>About me</li>
+      <li>Abilities</li>
+      <li>Others</li>
+      <li>Contact</li>
+    </ul>
+  </nav>
+
+  <div id="carouselExample" class="carousel slide">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/personita.jpg" class="d-block w-100" alt="Technical drawing">
       </div>
+      <div class="carousel-item">
+        <img src="assets/cajita.jpg" class="d-block w-100" alt="work in sketchup">
+      </div>
+      <div class="carousel-item">
+        <img src="assets/catedral.png" class="d-block w-100" alt="laser-cut work">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
 
-      <hr></hr>
+  <hr>
+  </hr>
+  <h2 class="titulo"><strong>About me</strong></h2>
+  <hr>
+  </hr>
 
-      <section>
-      <img src="assets/yo-conlaballena.jpg" class="imagenballena" alt="Imagen de alexia gomez"> 
-      <section class="texto1">
-        <p><strong>About me
-        <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed varius aliquet tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
-      </section>
-      </section>
 
-      <section>
-        <img src="assets/apps.png" class="imaApps" alt="imagen de apps"> 
-        <p><strong>Abilities
-          <h6>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed varius aliquet tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
-        </section>
+  <section>
+    <img src="assets/yo-conlaballena.jpg" class="imagenballena" alt="Imagen de alexia gomez">
+    <section class="texto1">
+      <h6> ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed varius aliquet
+        tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit,
+        vel feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo.<h6>
+    </section>
+  </section>
 
-</body>
-</html><div id="carouselExampleFade" class="carousel slide carousel-fade">
+  <hr>
+  </hr>
+  <h2 class="titulo"><strong>Abilities</strong></h2>
+  <hr>
+  </hr>
+
+  <section>
+    <img src="assets/apps.png" class="imaApps" alt="imagen de apps">
+    <h6 class="texto2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed
+      varius aliquet
+      tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel
+      feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet
+      semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
+  </section>
+
+  <hr>
+  </hr>
+  <h2 class="titulo"><strong>Others</strong></h2>
+  <hr>
+  </hr>
+
+</html>
+<div id="carouselExampleFade" class="carousel slide carousel-fade">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="assets/distriplinios.png" class="d-block w-100" alt="marketing con distriplinios">
     </div>
     <div class="carousel-item">
-      <img src="assets/fundamentos-desarrollowebç.png" class="d-block w-100" alt="fundamentos del fundamentos desarrollo web">
+      <img src="assets/fundamentos-desarrollowebç.png" class="d-block w-100"
+        alt="fundamentos del fundamentos desarrollo web">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -86,3 +114,21 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+
+<h6 class="texto2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam pretium dignissim felis. Sed varius
+  aliquet
+  tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel
+  feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet
+  semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
+
+  <button class="cambio" id="cambioColor">Change Mode</button>
+
+  <section class="registro">
+  <input class="controles" type="text" name="Nombre" id="Nombre" placeholder="First name">
+  <input class="controles" type="text" name="Apellido" id="Apellido" placeholder="Last name">
+  <input class="controles" type="email" name="Email" id="Email" placeholder="Email">
+  <textarea cols="30" rows="4" class="controles" type="message" name="Message" id="Message" placeholder="Message"></textarea>
+  <input class="boton" type="submit" value="Submit">
+  </section>
+</div>
+</body>
