--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link id="light-mode" href="stylesheet.css" rel="stylesheet">
-  <link id="dark-mode" href="stylesheet2.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -14,8 +13,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond&display=swap" rel="stylesheet">
-  <title>Portfolio</title>
   <script src="JS/cambio.js"></script>
+  <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
+  <title>Portfolio</title>
+  
 </head>
 
 <body class="fondo">
@@ -32,6 +33,10 @@
       <li>Abilities</li>
       <li>Others</li>
       <li>Contact</li>
+      <button class="cambio" id="cambio">
+        <span></span>
+        <span></span>
+      </button>
     </ul>
   </nav>
 
@@ -120,8 +125,6 @@
   tincidunt. Maecenas lacinia quam eget nisl facilisis, rutrum porta est blandit. Sed euismod tellus velit, vel
   feugiat ex viverra at. Quisque in blandit dolor, non vulputate justo. Nam dictum vulputate nisl, sit amet
   semper arcu vestibulum maximus. Nunc metus arcu, mollis at orci et, porta ultrices diam.</h6>
-
-  <button class="cambio" id="cambioColor">Change Mode</button>
 
   <section class="registro">
   <input class="controles" type="text" name="Nombre" id="Nombre" placeholder="First name">
