--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link id="light-mode" href="stylesheet.css" rel="stylesheet">
+  <link id="dark-mode" href="stylesheet2.css" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -33,10 +34,7 @@
       <li>Abilities</li>
       <li>Others</li>
       <li>Contact</li>
-      <button class="cambio" id="cambio">
-        <span></span>
-        <span></span>
-      </button>
+      <button onclick="cambiarCSS()" class="cambio" id="btn"></button>
     </ul>
   </nav>
 
